# CuteFishOS-Unofficial

./: README.md
appmotor/: CMakeLists.txt  README.md
appmotor-main/debian/: changelog
appmotor-main/src/: CMakeLists.txt
appmotor-main/src/cutefish-appmotor/: CMakeLists.txt  cutefish-appmotor.h  cutefish-appmotor.service
appmotor-main/src/invoker/: invoker.c
appmotor-main/src/single-instance/: CMakeLists.txt
appmotor/debian/: control
appmotor/src/cutefish-appmotor/: cutefish-appmotor.cpp
bluez-qt/debian/: changelog  control  copyright  libkf5bluezqt-data.install  libkf5bluezqt-data.maintscript  libkf5bluezqt-dev.acc.in  libkf5bluezqt-dev.install  libkf5bluezqt-doc.install  libkf5bluezqt6.install  libkf5bluezqt6.symbols  qml-module-org-kde-bluezqt.install  rules  watch
bluez-qt/debian/upstream/: metadata
core/notificationd/: notificationwindow.h  utils.h
cutefish-calamares-settings/: README.md
cutefish-calamares-settings/DEBIAN/: conffiles  control  md5sums  postinst
cutefish-plymouth/: README.md
cutefish-plymouth/cutefish-plymouth/: cutefish.plymouth  cutefish.script
mpm/: README.md
mpm/makedeb/: PKGBUILD
mpm/src/: mpm.sh
plymouth-theme/: README.md
plymouth-theme/cutefish-logo/: cutefish-logo.plymouth
plymouth-theme/cutefish-text/: cutefish-text.plymouth  cutefish-text.plymouth.in
plymouth-theme/debian/: changelog  control  copyright  files  install  postinst  prerm
qqc2-cutefish-style/: CMakeLists.txt
qqc2-cutefish-style/csd/: CSD.qml  config.conf
qqc2-cutefish-style/style/: ToolButton.qml
settings/src/: language.h  main.cpp
settings/translations/: vi_VN.ts
statusbar/src/: brightness.h
updator/: CMakeLists.txt  FinishedPage.qml  HomePage.qml  README.md  UpdatePage.qml  UpdatingPage.qml  cutefish-updator.desktop  main.cpp  main.qml  updatorhelper.cpp  updatorhelper.h  upgradeablemodel.cpp  upgradeablemodel.h
updator/debian/: changelog  control  copyright
(+17 files in other folders)
